--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,15 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Chance Beyer | Engineer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="javascript, chance beyer, chance, beyer, chancebeyer, C#, JavaScript, VUE.js, vue, Java, SQL, HTML, CSS, Microsoft Office, Google Suite, R, Linux, Visual Studio, NetBeans, Magento 2, Shopify, eCommerce Integrations, skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Chance Beyer 
+    Software engineering to me has always been trying to solve many different puzzles to make one excellent thing. 
+    Its the process of solving all of those puzzles that give me that little dopamine hit of happiness :)
+    One of my goals is to build a non-profit to help people with physical and mental diseases. 
+    My favorite things to do outside of work is rollerblading, climbing, biking, and researching crypto." />
 
     <link
       rel="stylesheet"
@@ -33,9 +37,8 @@
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
-
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
@@ -46,13 +49,13 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Chance Beyer</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Software Engineer.
         </h1>
         <p class="hero-cta load-hidden">
-          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+          <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#projects"
+            >Projects</a
           >
         </p>
       </div>
@@ -66,24 +69,28 @@
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
-              <img
-                alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="assets/profile.jpg"
-                alt="Profile Image"
-              />
+              <div>
+                <img
+                  alt="Profile Image"
+                  class="img-fluid rounded shadow-lg"
+                  height="auto"
+                  width="300px"
+                  src="assets/profile.jpg"
+                  alt="Profile Image"
+                />
+                <p class="about-wrapper__image-text">B.Sc. Computer Science</p>
+              </div>
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Software engineering to me has always been trying to solve many different puzzles to make one excellent thing. 
+                Its the process of solving all of those puzzles that give me that little dopamine hit of happiness :) 
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                One of my goals is to build a non-profit to help people with physical and mental diseases.
+                My favorite things to do outside of work is rollerblading, climbing, biking, and researching crypto.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,15 +119,22 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">eCheckpoint</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Designed and lead development of a product for RICO Technologies.
+                    Utilized and created a Javascript frontend using the Vue Framework, API using .NET, and SQLServer databases.
                   </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:vuedotjs" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:dotnet" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:microsoftsqlserver" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
                 </div>
                 <a
                   rel="noreferrer"
@@ -128,16 +142,16 @@
                   class="cta-btn cta-btn--hero"
                   href="#!"
                 >
-                  See Live
+                  See Whitepaper
                 </a>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="#!"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -153,7 +167,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/echeckpoint.png"
                     />
                   </div>
                 </a>
@@ -279,14 +293,20 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Would you like to work with me?</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:chanceb323@gmail.com"
+            >Get In Touch</a
           >
+          <p class="contact-wrapper__addl">or</p>
+          <a 
+            rel="noreferrer"
+            target="_blank"
+            href="tel:323-710-1190">
+          323-710-1190</a>
         </div>
       </div>
     </section>
@@ -299,13 +319,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/chancebeyer/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/chancebeyer1" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -314,35 +331,10 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
+          © 2022 - Chance Beyer
         </p>
 
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
+        
       </div>
     </footer>
     <!-- /END Footer Section -->
