--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,7 @@
                   <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
                   <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
                   <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:csharp" data-width="45"></span>
                   <span class="iconify" data-icon="simple-icons:dotnet" data-width="45"></span>
                   <span class="iconify" data-icon="simple-icons:microsoftsqlserver" data-width="45"></span>
                   <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
@@ -140,7 +141,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://echeckpoint.com/"
                 >
                   See Whitepaper
                 </a>
@@ -180,17 +181,24 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Non-profit NFT Minting Application</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Using blockchain technology, I am creating a React application that is able to connect to the Ethereum Blockchain Network.
+                    The function is for people to mint NFTs (exchange crypto for Smart Contracts) to their own Crypto wallets.
                   </p>
                 </div>
-                <a
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:react" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:ethereum" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
+                </div>
+                <p class="cta-btn cta-btn__noClick text-color-main">In Progress...</p>
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
@@ -205,7 +213,7 @@
                   href="#!"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -221,7 +229,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/nft.png"
                     />
                   </div>
                 </a>
@@ -234,32 +242,36 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Client/Server Application</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This project is a system that allows users to store information in a database (such as
+usernames, passwords, email addresses). It is a generic client/server architecture that
+includes the ability to store information in a database as well as provide a GUI frontend for
+easy use from the user’s point of view.
                   </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:java" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:mysql" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/chancebeyer1/Software-Engineering-Project"
                 >
-                  See Live
+                  See Source Code
                 </a>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="#!"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -275,7 +287,61 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/serverClient.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">2-3 Tree from Scratch</h3>
+                <div>
+                  <p class="mb-4">
+                    Built a complex self-balancing 2-3 tree data structure from scratch in C++.
+                    2‐3 trees guarantee logarithmic time O(lg(n)) insert, delete, and retrieve operations due to its balanced nature making it very useful in big datasets.
+                  </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:cplusplus" data-width="45"></span>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/chancebeyer1/TwoThreeTreeDataStructure"
+                >
+                  See Source Code
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/23tree.png"
                     />
                   </div>
                 </a>
@@ -287,6 +353,17 @@
       </div>
     </section>
     <!-- /END Projects Section -->
+
+    <!-- **** Testimonials Section **** -->
+    <!-- <section id="testimonials">
+      <div class="container">
+        <h2 class="section-title load-hidden">Testimonials</h2>
+        <div class="row testimonial-wrapper">
+          
+        </div>
+      </div>
+    </section> -->
+    <!-- /END Testimonials Section -->
 
     <!-- **** Contact Section **** -->
     <section id="contact">
