--- a/src/index.html
+++ b/src/index.html
@@ -90,16 +90,24 @@
               </p>
               <p class="about-wrapper__info-text">
                 One of my goals is to build a non-profit to help people with physical and mental diseases.
-                My favorite things to do outside of work is rollerblading, climbing, biking, and researching crypto.
+                My favorite things to do outside of work is rollerblading, climbing, biking, and building AI products.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Chance_Beyer_Resume_One_Page.pdf"
                 >
                   View Resume
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="https://www.youtube.com/@chancebeyer"
+                >
+                  My YouTube
                 </a>
               </span>
             </div>
@@ -114,6 +122,188 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">iinfii.ai</h3>
+                <div>
+                  <p class="mb-4">
+                    Designed the product end to end for Home Service Businesses. 
+                    iinfii.ai is a next-gen AI communications platform focused on providing 24/7, fully automated inbound and outbound agent support for businesses. 
+                    Its core offering includes AI-powered receptionists that can answer calls and chats, qualify leads, book jobs or meetings, manage follow-up sequences, and seamlessly hand off to live agents when needed.
+                  </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:cursor" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:elevenlabs" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:airtable" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:n8n" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://iinfii.ai/"
+                >
+                  See Whitepaper
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/iinfiiai.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+           
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">evercontent.ai</h3>
+                <div>
+                  <p class="mb-4">
+                    Built EverContent, an AI-driven content repurposing SaaS that transforms long-form webinars and presentations into short-form videos, newsletters, blog posts, quote graphics, and podcast-ready audio. Developed a fully automated pipeline for enterprise clients, enabling unlimited uploads and scalable content generation used by marketing, communications, and sales teams.  
+                  </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:cursor" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:elevenlabs" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:airtable" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:n8n" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://evercontent.ai/"
+                >
+                  See Whitepaper
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/evercontentai.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">iinfii.ai</h3>
+                <div>
+                  <p class="mb-4">
+                    Built and launched Candid AI: a no-code UGC video SaaS that turns a single product image into a realistic product-review video using Base44 (app/auth/pricing), n8n (orchestration), Sora-2 via Key API (image→video), and Stripe (subscriptions).
+                  </p>
+                </div>
+                <div class="project-wrapper__text-icons">
+                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:cursor" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:elevenlabs" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:airtable" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:n8n" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
+                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://candidai.base44.app/"
+                >
+                  Try it out
+                </a>
+                <!-- <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="#!"
+                >
+                  Source Code
+                </a> -->
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/candidai.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -177,178 +367,6 @@
           </div>
           <!-- /END Project -->
 
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Non-profit NFT Minting Application</h3>
-                <div>
-                  <p class="mb-4">
-                    Using blockchain technology, I am creating a React application that is able to connect to the Ethereum Blockchain Network.
-                    The function is for people to mint NFTs (exchange crypto for Smart Contracts) to their own Crypto wallets.
-                  </p>
-                </div>
-                <div class="project-wrapper__text-icons">
-                  <span class="iconify" data-icon="simple-icons:react" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:ethereum" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:javascript" title="Javascript" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:html5" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:css3" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:npm" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
-                </div>
-                <p class="cta-btn cta-btn__noClick text-color-main">In Progress...</p>
-                <!-- <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a> -->
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/nft.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Client/Server Application</h3>
-                <div>
-                  <p class="mb-4">
-                    This project is a system that allows users to store information in a database (such as
-usernames, passwords, email addresses). It is a generic client/server architecture that
-includes the ability to store information in a database as well as provide a GUI frontend for
-easy use from the user’s point of view.
-                  </p>
-                </div>
-                <div class="project-wrapper__text-icons">
-                  <span class="iconify" data-icon="simple-icons:java" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:mysql" data-width="45"></span>
-                  <span class="iconify" data-icon="simple-icons:git" data-width="45"></span>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/chancebeyer1/Software-Engineering-Project"
-                >
-                  See Source Code
-                </a>
-                <!-- <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a> -->
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/serverClient.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">2-3 Tree from Scratch</h3>
-                <div>
-                  <p class="mb-4">
-                    Built a complex self-balancing 2-3 tree data structure from scratch in C++.
-                    2‐3 trees guarantee logarithmic time O(lg(n)) insert, delete, and retrieve operations due to its balanced nature making it very useful in big datasets.
-                  </p>
-                </div>
-                <div class="project-wrapper__text-icons">
-                  <span class="iconify" data-icon="simple-icons:cplusplus" data-width="45"></span>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/chancebeyer1/TwoThreeTreeDataStructure"
-                >
-                  See Source Code
-                </a>
-                <!-- <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a> -->
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/23tree.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -396,6 +414,9 @@ easy use from the user’s point of view.
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
+          <a rel="noreferrer" href="https://www.youtube.com/@chancebeyer" target="_blank">
+            <i class="fa fa-brands fa-youtube fa-inverse"></i>
+          </a>
           <a rel="noreferrer" href="https://www.linkedin.com/in/chancebeyer/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
@@ -408,7 +429,7 @@ easy use from the user’s point of view.
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2022 - Chance Beyer
+          © 2025 - Chance Beyer
         </p>
 
         
