New profile photo

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                   class="img-fluid rounded shadow-lg"
                   height="auto"
                   width="300px"
-                  src="assets/profile.jpg"
+                  src="assets/IMG_7810.HEIC"
                   alt="Profile Image"
                 />
                 <p class="about-wrapper__image-text">B.Sc. Computer Science</p>
@@ -249,7 +249,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">iinfii.ai</h3>
+                <h3 class="project-wrapper__text-title">Candid.ai</h3>
                 <div>
                   <p class="mb-4">
                     Built and launched Candid AI: a no-code UGC video SaaS that turns a single product image into a realistic product-review video using Base44 (app/auth/pricing), n8n (orchestration), Sora-2 via Key API (image→video), and Stripe (subscriptions).
