--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                   class="img-fluid rounded shadow-lg"
                   height="auto"
                   width="300px"
-                  src="assets/IMG_7810.HEIC"
+                  src="assets/IMG_7810.png"
                   alt="Profile Image"
                 />
                 <p class="about-wrapper__image-text">B.Sc. Computer Science</p>
