--- a/src/index.html
+++ b/src/index.html
@@ -415,7 +415,7 @@
         </a>
         <div class="social-links">
           <a rel="noreferrer" href="https://www.youtube.com/@chancebeyer" target="_blank">
-            <i class="fa fa-brands fa-youtube fa-inverse"></i>
+            <i class="fa fa-youtube-play fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="https://www.linkedin.com/in/chancebeyer/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
